--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "startB": "cd backend && npm start",
     "startF": "cd frontend && npm run dev",
-    "start": "concurrently \"cd backend && npm start\" \"cd frontend && npm run dev\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "startC": "concurrently \"cd backend && npm run dev\" \"cd frontend && npm run dev\"",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
+    "start": "npm run start --prefix backend"
   },
   "repository": {
     "type": "git",
